tests/snapshots/snapshots__interpreter@option_chain.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/option_chain.pr
---
50
=> ()
