tests/snapshots/snapshots__interpreter@or_null.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/or_null.pr
---
found
nothing
=> ()
