tests/snapshots/snapshots__interpreter@ord_dispatch.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/ord_dispatch.pr
---
true
false
true
true
true
true
=> ()
