tests/snapshots/snapshots__interpreter@param_eff.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/param_eff.pr
---
1
2
a
b
=> ()
