tests/snapshots/snapshots__interpreter@parse_float.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/parse_float.pr
---
3.14
-2.5
6.25
0
1000
nan
inf
-inf
0
0
0
0
0
0
0
0
=> ()
