tests/snapshots/snapshots__interpreter@path_lit.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/path_lit.pr
---
1
10
42
30
2
9
6
30
=> ()
